# hacker-news-summary

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
src/hacker_news_summary_channel/: __init__.py  __main__.py  config.py  content_fetcher.py  formatting.py  hn_client.py  models.py  service.py  storage.py  summarizer.py  telegram.py
tests/: test_config.py  test_formatting.py  test_hn_client.py  test_polling_service.py  test_service_logic.py  test_summarizer.py
